implement early logging