@@ -47,7 +47,8 @@ test {
             "--add-opens=java.base/java.lang=ALL-UNNAMED",
             "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
             "--add-opens=java.base/java.io=ALL-UNNAMED",
-            "--add-opens=java.base/java.util=ALL-UNNAMED")
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--enable-native-access=ALL-UNNAMED")
 }
 
 publishing {
